--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
   list-style: none;
   font-family: "맑은 고딕";
   color: #333333;
-}
 
+}
 body {
   width: 100%;
   height: 100vh;
@@ -23,4 +23,76 @@ a {
   display: block;
 }
 
+header{
+  float: left;
+  background: #171c61;
+}
 
+.top{
+  float: left;
+  width: 200px;
+  height: calc(100vh - 100px);
+  min-height: 720px;
+}
+
+.logo{
+  float: left;
+  width: 200px;
+  height: 120px;
+  margin-top: 30px;
+}
+
+.logo img{
+  float: left;
+  width: 180px;
+  height: 100px;
+  margin-left: 10px;
+}
+
+.menu{
+  float: left;
+  width: 190px;
+  background: greenyellow;
+}
+
+.bodywarp{
+  float: right;
+  width: calc(100% - 200px);
+  height: calc(100vh - 100px);
+  min-height: 720px;
+  background-color: aquamarine;
+}
+
+.contents{
+  float: left;
+  width: 400px;
+  height: 100%;
+  background-color: pink;
+}
+
+#banner{
+  width: 100%;
+  height: 130px;
+  background: blue;
+}
+
+.notice{
+  float: left;
+  width: 100%;
+  height: 200px;
+  background: gold;
+}
+
+.gallery{
+  float: left;
+  width: 100%;
+  height: 200px;
+  background: rebeccapurple;
+}
+
+footer{
+  float: left;
+  width: 100%;
+  height: 100px;
+  background-color: #ccc;
+}
