--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,17 @@ header{
   min-height: 720px;
 }
 
+.logo{
+  float: left;
+  width: 200px;
+  height: 120px;
+}
+
+.menu{
+  float: left;
+  width: 190px;
+}
+
 .bodywarp{
   float: right;
   width: calc(100% - 200px);
@@ -46,6 +57,29 @@ header{
   width: 400px;
   height: 100%;
   background: bisque;
+}
+
+#banner{
+  width: 100%;
+  height: 130px;
+}
+
+.notice{
+  float: left;
+  width: 100%;
+  height: 200px;
+}
+
+.gallery{
+  float: left;
+  width: 100%;
+  height: 200px;
+}
+
+#shortcut{
+  float: left;
+  width: 100%;
+  height: 90px;
 }
 
 .imgslide{
