--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ a {
 
 header{
   float: left;
+  background-color: #171c61;
 }
 
 .top{
@@ -38,11 +39,65 @@ header{
   float: left;
   width: 200px;
   height: 120px;
+  margin-top: 30px;
+}
+
+.logo img{
+  float: left;
+  width: 180px;
+  height: 100px;
+  margin-left: 10px;
 }
 
 .menu{
   float: left;
   width: 190px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.navi>li{
+  float: left;
+  width: 190px;
+  height: 50px;
+}
+
+.navi>li>a{
+  height: 50px;
+  line-height: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.navi>li>a:hover{
+  background-color: #ffe200;
+  color: #000;
+}
+
+.submenu{
+  width: 100%;
+  position: relative;
+  top: -50px;
+  left: 190px;
+ /*  display: none; */
+  z-index: 1;
+}
+
+.submenu>li>a{
+  float: left;
+  width: 180px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+}
+
+.submenu>li>a:hover{
+  background-color: #ffe200;
+  color: #000;
 }
 
 .bodywarp{
@@ -91,5 +146,23 @@ header{
 footer{
   float: left;
   width: 100%;
+  height: 100px;
+}
+
+.btlogo{
+  float: left;
+  width: 200px;
+  height: 100px;
+}
+
+.copy{
+  float: left;
+  width: calc(100% - 500px);
+  height: 100px;
+}
+
+.sns{
+  float: right;
+  width: 270px;
   height: 100px;
 }
