--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,32 @@ header{
   float: left;
   width: 400px;
   height: 100%;
-  background: bisque;
 }
 
 #banner{
   width: 100%;
   height: 130px;
+}
+
+#banner img{
+  float: left;
+  width: 15%;
+  height: auto;
+  padding-top: 40px;
+  padding-left: 5%;
+}
+
+.bntext{
+  float: left;
+  width: 70%;
+  height: auto;
+  font-size: 16px;
+  padding-top: 40px;
+  padding-left: 5%;
+}
+
+.bntext:hover{
+  font-weight: bold;
 }
 
 .notice{
