--- a/css/style.css
+++ b/css/style.css
@@ -1,188 +1,11 @@
-@charset "utf-8";
-/* CSS Document */
+<프로젝트 수업>
+인원 : 총 3명
+역할 : 기획 1명, 디자인 1명, 홈페이지 개발 1발
 
-* {
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  font-family: "맑은 고딕";
-  color: #333333;
 
-}
-body {
-  width: 100%;
-  height: 100vh;
-  min-width: 1000px; 
-  min-height: 820px; 
-  background-color: #ffffff;
-  font-size: 20px;
-}
+1) 팀명 정하기
+2) 어떤 웹사이트를 구축할지 주제 정하기
+3) 웹사이트명 정하기
+4) 웹사이트 레이아웃 및 디자인
 
-a {
-  text-decoration: none;
-  display: block;
-}
 
-header{
-  float: left;
-  background-color: #171c61;
-}
-
-.top{
-  float: left;
-  width: 200px;
-  height: calc(100vh - 100px);
-  min-height: 720px;
-}
-
-.logo{
-  float: left;
-  width: 200px;
-  height: 120px;
-  margin-top: 30px;
-}
-
-.logo img{
-  float: left;
-  width: 180px;
-  height: 100px;
-  margin-left: 10px;
-}
-
-.menu{
-  float: left;
-  width: 190px;
-  margin-left: 10px;
-  text-align: center;
-}
-
-.navi>li{
-  float: left;
-  width: 190px;
-  height: 50px;
-}
-
-.navi>li>a{
-  height: 50px;
-  line-height: 50px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #ffffff;
-}
-
-.navi>li>a:hover{
-  background-color: #ffe200;
-  color: #000;
-}
-
-.submenu{
-  width: 100%;
-  position: relative;
-  top: -50px;
-  left: 190px;
- /*  display: none; */
-  z-index: 1;
-}
-
-.submenu>li>a{
-  float: left;
-  width: 180px;
-  height: 50px;
-  line-height: 50px;
-  font-size: 14px;
-  font-weight: bold;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: #fff;
-}
-
-.submenu>li>a:hover{
-  background-color: #ffe200;
-  color: #000;
-}
-
-.bodywarp{
-  float: right;
-  width: calc(100% - 200px);
-  height: calc(100vh - 100px);
-  min-height: 720px;
-}
-
-.contents{
-  float: left;
-  width: 400px;
-  height: 100%;
-}
-
-#banner{
-  width: 100%;
-  height: 130px;
-}
-
-#banner img{
-  float: left;
-  width: 15%;
-  height: auto;
-  padding-top: 40px;
-  padding-left: 5%;
-}
-
-.bntext{
-  float: left;
-  width: 70%;
-  height: auto;
-  font-size: 16px;
-  padding-top: 40px;
-  padding-left: 5%;
-}
-
-.bntext:hover{
-  font-weight: bold;
-}
-
-.notice{
-  float: left;
-  width: 100%;
-  height: 200px;
-}
-
-.gallery{
-  float: left;
-  width: 100%;
-  height: 200px;
-}
-
-#shortcut{
-  float: left;
-  width: 100%;
-  height: 90px;
-}
-
-.imgslide{
-  float: right;
-  width: calc(100% - 400px);
-  height: 100%;
-}
-
-footer{
-  float: left;
-  width: 100%;
-  height: 100px;
-}
-
-.btlogo{
-  float: left;
-  width: 200px;
-  height: 100px;
-}
-
-.copy{
-  float: left;
-  width: calc(100% - 500px);
-  height: 100px;
-}
-
-.sns{
-  float: right;
-  width: 270px;
-  height: 100px;
-}
