--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,22 @@
 인원 : 총 3명
 역할 : 기획 1명, 디자인 1명, 홈페이지 개발 1발
 
+<1조>
+기획(성민성) - 디자인(서민욱) - 개발(윤미상)
+
+<2조>
+기획(김태민,최준호) - 디자인(이호진) - 개발(김은우)
+
+<3조>
+기획(손우현) - 디자인(박지윤) - 개발(이승주)
+
+<4조>
+기획(김호찬) - 디자인(윤준수) - 개발(이동석)
+
+<5조>
+기획(최시영) - 디자인(이우성) - 개발(김민재)
+
+--------------------------------------------------
 
 1) 팀명 정하기
 2) 어떤 웹사이트를 구축할지 주제 정하기
