--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,28 @@
 인원 : 총 3명
 역할 : 기획 1명, 디자인 1명, 홈페이지 개발 1발
 
+--------------------------------------------------
+
+3-1반
+
+<1조>
+기획(제현하) - 디자인(전민건) - 개발(전영제)
+
+<2조>
+기획(강연빈) - 디자인(채인우) - 개발(이승준)
+
+<3조>
+기획(장창운) - 디자인(이유정) - 개발()
+
+<4조>
+기획(방대준) - 디자인() - 개발()
+
+<5조>
+기획() - 디자인() - 개발()
+
+
+--------------------------------------------------
+
 <1조>
 기획(성민성) - 디자인(서민욱) - 개발(윤미상)
 
