--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@
 
 3-1반
 
-<1조>
+<1조> 배달의 목적
 기획(제현하) - 디자인(전민건) - 개발(전영제)
 
-<2조>
+<2조> 배달...
 기획(강연빈) - 디자인(채인우) - 개발(이승준)
 
-<3조>
+<3조> 
 기획(장창운) - 디자인(이유정) - 개발()
 
 <4조>
